[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pytak"
authors = [{name = "Greg Albrecht", email = "oss@undef.net"}]
dynamic = ["version", "description", "optional-dependencies", "readme", 
  "requires-python", "license", "maintainers", "keywords", "classifiers"]
