[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pytak"
authors = [{name = "Greg Albrecht", email = "oss@undef.net"}]
dynamic = ["version", "description", "readme", 
  "requires-python", "license", "maintainers", "keywords", "classifiers"]

[project.optional-dependencies]
with-crypto = ["cryptography >= 39.0.0"]
with-takproto = ["takproto >= 2.0.0"]
with-aiohttp = ["aiohttp >= 3.8.0"]
test = [
  "pytest-asyncio",
  "pytest-cov",
  "pylint",
  "flake8",
  "black",
  "cryptography",
  "aiohttp",
  "takproto",
]

[project.scripts]
pytak = "pytak.cli_main:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
