# Setup configuration for the Python Team Awareness Kit (PyTAK) Module.
#
# Copyright 2023 Sensors & Signals LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Source:: https://github.com/snstac/pytak
#


[metadata]
name = pytak
version = attr: pytak.__version__
url = https://github.com/snstac/pytak
project_urls =
  CI: GitHub Actions = https://github.com/snstac/pytak/actions
  GitHub: issues = https://github.com/snstac/pytak/issues
  GitHub: repo = https://github.com/snstac/pytak
description = PyTAK: Python Team Awareness Kit Module
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

  Development Status :: 5 - Production/Stable

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server


[options]
python_requires = >=3.6, <4
# include_package_data = True


[options.extras_require]
with_crypto = cryptography >= 39.0.0
with_takproto = takproto >= 2.0.0
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
  cryptography


# [pep8]
# max-line-length=88


# [easy_install]
# zip_ok = false


# [flake8]
# # ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
# max-line-length = 88

# [aliases]
# test=pytest

# [isort]
# line_length=88
# include_trailing_comma=True
# multi_line_output=3
# force_grid_wrap=0
# combine_as_imports=True

# known_third_party=pytest
# known_first_party=pytak

# [report]
# exclude_lines =
#     @abc.abstractmethod
#     @abstractmethod

# [tool:pytest]
# addopts = --cov=pytak -v -rxXs
# filterwarnings = error
# junit_suite_name = pytak_test_suite
# junit_family = xunit2
# norecursedirs = dist docs build .tox .eggs
# minversion = 3.8.2
# testpaths = tests/
# asyncio_mode = strict

# [coverage:run]
# branch = True
# source = pytak
# omit = site-packages

# [mypy]
# follow_imports = silent
# strict_optional = True
# warn_redundant_casts = True

# # uncomment next lines
# # to enable strict mypy mode
# #
# check_untyped_defs = True
# disallow_any_generics = True
# disallow_untyped_defs = True
# warn_unused_ignores = True

# [mypy-pytest]
# ignore_missing_imports = true