# Setup configuration for the Python Team Awareness Kit (PyTAK) Module.
#
# Copyright 2023 Sensors & Signals LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Source:: https://github.com/snstac/pytak
#


[metadata]
name = pytak
version = attr: pytak.__version__
url = https://github.com/snstac/pytak
project_urls =
  CI: GitHub Actions = https://github.com/snstac/pytak/actions
  GitHub: issues = https://github.com/snstac/pytak/issues
  GitHub: repo = https://github.com/snstac/pytak
description = PyTAK: Python Team Awareness Kit Module
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server


[options]
python_requires = >=3.6, <4


[options.extras_require]
with_crypto = cryptography >= 39.0.0
with_takproto = takproto >= 2.0.0
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
  cryptography
