# Setup configuration for the Python Team Awareness Kit (PyTAK) Module.
# setup.cfg from https://github.com/snstac/pytak
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


[metadata]
name = pytak
version = file: src/pytak/VERSION
url = https://github.com/snstac/pytak
project_urls =
  CI: GitHub Actions = https://github.com/snstac/pytak/actions
  GitHub: issues = https://github.com/snstac/pytak/issues
  GitHub: repo = https://github.com/snstac/pytak
description = PyTAK is a Python package for rapid TAK integration.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
authors = 
  { name="Greg Albrecht", email="oss@undef.net" }
requires_python = ">=3.7"
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server

[options]
packages = find:
include_package_data = True
python_requires = >=3.6, <4
package_dir = 
  pytak = src/pytak

[options.packages.find]
where = src

[options.extras_require]
with_crypto = cryptography >= 39.0.0
with_takproto = takproto >= 2.0.0
with_aiohttp = aiohttp >= 3.8.0
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
  cryptography
  aiohttp
  takproto

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88